--- a/Styles/general.css
+++ b/Styles/general.css
@@ -3,6 +3,7 @@ body{
     padding: 0;
     font-family: Ubuntu, sans-serif;
     color: #283654;
+    background-color: white;
 }
 
 h1{
@@ -17,4 +18,28 @@ h2{
 .logo{
     width: 150px;
     margin: 15px 0px;
+}
+
+nav{
+    display: flex;
+    position: fixed;
+    top: 0px;
+    background-color: white;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #dddddd;
+}
+.menus{
+    display: flex;
+    justify-content: space-around;
+    list-style: none;
+}
+
+.menu{
+    padding-right: 1.75rem;
+}
+
+#current-menu{
+    color: #dddddd;
 }
