--- a/Styles/general.css
+++ b/Styles/general.css
@@ -6,6 +6,10 @@ body{
     background-color: white;
 }
 
+a{
+    text-decoration: none;
+}
+
 h1{
     font-size: 4rem;
     color: #88A7Eb;
@@ -42,4 +46,18 @@ nav{
 
 #current-menu{
     color: #dddddd;
+}
+
+.button{
+    z-index: 3;
+    background-color: #cfeb7c;
+    border-radius: 7px;
+    box-shadow: none;
+    text-shadow: none;
+    text-decoration: none;
+    font-size: 1.25rem;
+    font-family: Ubuntu, sans-serif;
+    padding: 1rem;
+    border-style: none;
+
 }
