--- a/Styles/me.css
+++ b/Styles/me.css
@@ -4,7 +4,7 @@ body{
 }
 
 .ultra-container{
-    max-width: 1000px;
+    max-width: 800px;
     margin: 0px auto;
 }
 
@@ -25,14 +25,14 @@ body{
 }
 
 .hero img{
-   width: 495px;
+   width: 390px;
    height: auto;
 
 }
 
 .p-container{
-    max-width: 495px;
-    font-size: 1.5rem;
+    max-width: 390px;
+    font-size: 1.15rem;
 }
 
 .grid{
@@ -41,6 +41,7 @@ body{
     "under post"
     "work work"
     ;
+    padding-top: 1.75rem;
     column-gap: 10px;
     row-gap: 10px;
 }
@@ -63,16 +64,52 @@ body{
     padding-top: 0.25rem;
     padding-left: 2rem;
     padding-right: 2rem;
-    padding-bottom: 1rem;
+    padding-bottom: 1.5rem;
 }
 
 .qual-box p{
-    font-size: 1.25rem;
+    font-size: 1.15rem;
 }
 
 .qual-box h4{
-    font-size: 2.25rem;
+    font-size: 2rem;
     margin-bottom: 1.25rem;
     color: #88A7EB
 }
+
+.after-text {
+    font-size: 1.25rem;
+    text-align: center;
+}
+
+.after-text h4{
+    font-weight: 400;
+}
+
+.skills {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.skills li{
+    list-style-type: none;
+    padding: 0.5rem;
+    font-size: 1.15rem;
+    font-weight: 900;
+}
+
+.cta{
+    color: #88A7EB;
+    font-size: 1.25rem;
+    text-align: center;
+    padding-bottom: 2rem;
+}
+
+.cta h3{
+    font-weight: 400;
+    padding-bottom: 1rem;
+}
+
 
